Fix z-index

--- a/src/app/ui/FeaturesCarousel/features-carousel.module.css
+++ b/src/app/ui/FeaturesCarousel/features-carousel.module.css
@@ -42,7 +42,7 @@
     width: 100%;
     height: 100%;
     top: 0;
-    z-index: 1000;
+    z-index: 50;
     justify-content: space-between;
     align-items: center;
     /* background-color: aqua; */
